VFS-3111 Fixed overflow in content-info component used in wizard.

--- a/src/app/styles/content-info.scss
+++ b/src/app/styles/content-info.scss
@@ -2,6 +2,7 @@
   .world-map {
     position: absolute;
     @include fill-container();
+    overflow: hidden;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
